k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: credit-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api-gateway

  template:
    metadata:
      labels:
        app: api-gateway

    spec:
      containers:
        - name: api-gateway
          image: api-gateway:0.3

          imagePullPolicy: Never

          ports:
          - name: health-port
            containerPort: 8080

          livenessProbe:
              httpGet:
                path: /health
                port: health-port
              initialDelaySeconds: 10
              periodSeconds: 10
          readinessProbe:
              httpGet:
                path: /health
                port: health-port
              initialDelaySeconds: 10
              periodSeconds: 5
