k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: api-gateway
  namespace: credit-system

spec:
  selector:
    app: api-gateway

  ports:
    - port: 80
      targetPort: 8080

  type: NodePort
