k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-gateway-ingress
  namespace: credit-system

spec:
  ingressClassName: nginx

  rules:
    - host: credit.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 80
